# -----------------------------------------------------------------------------
# pyproject.toml — Configuration du projet voltapeak_loops.
#
# Ce fichier décrit le projet et configure les outils de lint, de formatage
# et de vérification de types. Objectif : rendre les linters silencieux sur
# les choix de style volontaires du projet, sans masquer les vraies erreurs.
# -----------------------------------------------------------------------------

[project]
name = "voltapeak_loops"
version = "0.1.0"
description = "Outil GUI Tkinter d'analyse parallélisée (multiprocessing) d'un dossier de mesures SWV avec correction de ligne de base asPLS Whittaker. Gère plusieurs itérations (loops) par expérience, agrégées dans un classeur Excel hiérarchique."
readme = "README.MD"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "pybaselines",
    "openpyxl",
]

# -----------------------------------------------------------------------------
# Ruff — linter et formateur Python rapide.
# https://docs.astral.sh/ruff/
# -----------------------------------------------------------------------------
[tool.ruff]
# Longueur de ligne tolérée — 120 car les appels matplotlib et les
# signatures de `processSignalFile` / `plotSignalAnalysis` dépassent 80.
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# Règles activées par défaut dans Ruff :
#   E, F : erreurs pycodestyle + pyflakes (imports inutilisés, etc.).
# On ajoute :
#   W   : warnings pycodestyle (espaces, tabulations).
#   I   : tri des imports (isort).
select = ["E", "F", "W", "I"]

# Règles désactivées — choix assumés du projet :
ignore = [
    # E501 : ligne trop longue. Même avec line-length=120, certaines
    # lignes de tracé matplotlib et d'appels de pipeline restent plus longues.
    "E501",
]

[tool.ruff.lint.per-file-ignores]
# Aucun fichier spécifique pour l'instant — placeholder pour extensions futures.

# -----------------------------------------------------------------------------
# pep8-naming (règles N).
# Le projet utilise volontairement le camelCase pour les fonctions et
# variables scientifiques (cohérence avec les conventions internes
# GROUPE TRACE et symétrie avec la notation mathématique).
# Les règles N802/N803/N806 produiraient des dizaines de faux positifs ;
# elles ne sont pas sélectionnées.
# -----------------------------------------------------------------------------
# [tool.ruff.lint.pep8-naming]  # section non instanciée car "N" non sélectionné.

# -----------------------------------------------------------------------------
# Pylint — si utilisé, mêmes tolérances que ruff.
# -----------------------------------------------------------------------------
[tool.pylint.main]
disable = [
    "C0103",  # invalid-name : fonctions / variables hors snake_case.
    "C0301",  # line-too-long : cohérent avec ruff (line-length=120).
    "C0413",  # wrong-import-position : matplotlib.use('Agg') doit s'intercaler
              # entre `import matplotlib` et `import matplotlib.pyplot` (cf.
              # commentaire en tête du fichier source).
    # Seuils arbitraires de Pylint non pertinents pour un script scientifique
    # + GUI Tkinter : `launch_gui` concentre toutes les déclarations de
    # widgets (locales et instructions) et `plotSignalAnalysis` passe
    # volontairement tous les tracés en arguments.
    "R0912",  # too-many-branches.
    "R0913",  # too-many-arguments.
    "R0914",  # too-many-locals.
    "R0915",  # too-many-statements.
    "R0917",  # too-many-positional-arguments (variante R0913).
    # broad-exception-caught : `processSignalFile` capture volontairement
    # toute exception pour retourner un dict {"error": ...} plutôt que
    # lever, afin que le pool de processus continue de traiter les autres
    # fichiers en cas d'échec ponctuel.
    "W0718",  # broad-exception-caught.
]

[tool.pylint.format]
max-line-length = 120

# -----------------------------------------------------------------------------
# Mypy — vérification de types (usage optionnel).
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true   # pybaselines, scipy : stubs partiels ou absents.
warn_unused_ignores = true

# -----------------------------------------------------------------------------
# Pyright / Pylance — vérification de types côté IDE (VS Code).
# -----------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.10"
# Venv local à la racine du projet : Pyright (et Pylance) y lit directement
# les paquets installés, évitant à la fois le stub `python.exe` du Microsoft
# Store (qui ne résout aucun import) et toute sélection manuelle d'interpréteur
# dans VS Code. À créer via `py -m venv .venv` puis `pip install -e .`.
venvPath = "."
venv = ".venv"
# reportMissingModuleSource : désactivé pour openpyxl (pas de stubs publiés
# côté source, seulement des types partiels dans le paquet lui-même).
reportMissingModuleSource = "none"
# reportPrivateImportUsage : désactivé — symétrique du projet voltapeak,
# certains symboles matplotlib / scipy sont considérés comme re-exports
# privés par Pyright alors qu'ils sont documentés.
reportPrivateImportUsage = "none"
# reportMissingTypeStubs : les bibliothèques scientifiques n'ont pas
# toutes des stubs officiels — on n'en fait pas un blocage.
reportMissingTypeStubs = "none"
